# domato-rs

./: .gitignore  Cargo.toml
domato/: Cargo.toml
domato/src/: grammar.rs  kind.rs  lib.rs  regex_utils.rs
generator/html/: Cargo.toml
generator/html/src/: element.rs  main.rs
