[package]
name = "html-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "string"] }
domato = { path = "../../domato" }
once_cell = "1.19.0"
rand = "0.8.5"
regex = "1.10.4"
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26.2"
